# tr4c3r

./: .dockerignore  .flake8  .gitignore  .markdownlint.json  Dockerfile  IMPLEMENTATION_CHECKLIST.md  LICENSE  Makefile  Pipfile  README.md  RESTRUCTURING_COMPLETE.md  docker-compose.yml  pyproject.toml  run_gui.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
config/: .env.example  tr4c3r.yaml.example
docs/: API.md  API_QUICKSTART.md  AUTHENTICATION.md  DATA_ENCRYPTION.md  DOCKER.md  ENHANCEMENTS_SUMMARY.md  ETHICS_SAFETY_LEVELS.md  EXECUTION_PLAN.md  INTEGRATIONS.md  LOGGING_INFRASTRUCTURE.md  MEDIA_OSINT_SUMMARY.md  MISSING_FEATURES.md  MOBILE_APP_SUMMARY.md  NAME_SEARCH_SUMMARY.md  SEARCH_MODULES_COMPARISON.md  SECURITY_GUIDELINES_SUMMARY.md  UTILITIES.md  WEB_DASHBOARD_SUMMARY.md  email_search.md  infrastructure_completed.md  name_search.md  phone_search.md  tr4c3r_plan.md
scripts/: build-portable.bat  build-portable.sh
src/: __init__.py  cli.py
tests/: test_api.py  test_api_clients.py  test_auth.py  test_cache.py  test_config.py  test_correlation.py  test_darkweb_search.py  test_data_models.py  test_database.py  test_deduplication.py  test_email_search.py  test_encryption.py  test_enhancements.py  test_error_recovery.py  test_graph_exporter.py  test_integration.py  test_integrations.py  test_logging.py  test_media_search.py  test_mobile_api.py  test_name_search.py  test_phone_search.py  test_progress.py  test_rate_limit.py  test_rate_limiter.py  test_security.py  test_social_search.py  test_username_search.py  (+2 more)
(+69 files in other folders)
