[project]
name = "tr4c3r"
version = "1.0.0"
description = "TR4C3R - OSINT Investigation Tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Into-The-Grey"}
]
keywords = ["osint", "investigation", "security", "reconnaissance"]

[project.scripts]
tr4c3r = "src.cli:main"
tr4c3r-gui = "src.gui.main_window:main"

[project.gui-scripts]
tr4c3r-gui = "src.gui.main_window:main"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
